--- a/src/components/molecules/CardContributor/CardContributor.astro
+++ b/src/components/molecules/CardContributor/CardContributor.astro
@@ -28,12 +28,12 @@ const roles = rol.join(', ');
       width="200"
     />
   </div>
-  <div class="card__contributor__container social__container--contributor">
+  <div class="card__contributor__container ">
     <h2 class="card__contributor__name">{name}</h2>
 
     <p class="card__contributor__rol">{roles}</p>
 
-    <div class="social__container">
+    <div class="social__container social__container--contributor">
       <a href={gitHub} target="_blank" rel="noopener noreferrer">
         <iconify-icon
           class="social__icon"
