--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 @import "@molecules/SocialCard/social-card";
 @import "@organisms/Social/social";
 @import "@molecules/CardContributor/card-contributtor"; 
+@import "@pages/contributor/contributor";
 
 * {
    box-sizing: border-box;
