--- a/src/components/atoms/ProfilePicture/_profile-picture.scss
+++ b/src/components/atoms/ProfilePicture/_profile-picture.scss
@@ -41,16 +41,14 @@
   width: 50px;
   height: 50px;
   padding: 3.5rem;
-  display: grid;
-  place-content: center;
-}
-
-.hero__skills {
   @include centerFlex();
 }
 
+/* .hero__skills {
+  @include centerFlex();
+} */
+
 .skills__icons {
-  transform: rotate(0deg);
   font-size: 4.5rem;
   @include respond-to("medium") {
     font-size: 4rem;
