--- a/src/components/organisms/Portfolio/Portfolio.astro
+++ b/src/components/organisms/Portfolio/Portfolio.astro
@@ -1,27 +1,48 @@
 ---
+import {portfolioCardsData} from "@services/getPortfolioCards";
 import Title from "@src/components/atoms/Title/Title";
 import CardPortfolio from "../../molecules/CardPortfolio/CardPortfolio.astro";
 
-import { portfolioCardsData } from "@src/services/getPortfolioCards";
-const data = await portfolioCardsData();
 
-const mainData = data.proyectosPortafolio.edges.map((item) => {
-  //Separar Iconos de su valor para obtener atributo icon de iconify
-  const skillicons = item.node.proyectoPortafolio.skillicons.map((icon) => {
-    const parts = icon.split(":");
-    return parts.length > 1 ? parts.slice(1).join(":").trim() : icon.trim();
+import defaultImage from "../../../../public/img/metaBanner.webp";
+
+// Función para obtener los datos de la API de respaldo
+async function fetchBackupData() {
+  try {
+    const response = await fetch("https://itssofi.dev/api/portafolio");
+    const data = await response.json();
+    return data.portafolio;
+  } catch (error) {
+    console.error("Error fetching backup data:", error);
+    return [];
+  }
+}
+
+// Intentar obtener los datos principales
+let mainData = [];
+try {
+  const data = await portfolioCardsData();
+  mainData = data.proyectosPortafolio.edges.map((item) => {
+    const skillicons = item.node.proyectoPortafolio.skillicons.map((icon) => {
+      const parts = icon.split(":");
+      return parts.length > 1 ? parts.slice(1).join(":").trim() : icon.trim();
+    });
+
+    return {
+      title: item.node.title,
+      description: item.node.proyectoPortafolio.description,
+      imgSrc: item.node.proyectoPortafolio.imgsrc_url?.node?.link || defaultImage,
+      demoURL: item.node.proyectoPortafolio.demourl,
+      repoURL: item.node.proyectoPortafolio.repoUrl,
+      skills: item.node.proyectoPortafolio.skills,
+      skillicons,
+    };
   });
-
-  return {
-    title: item.node.title,
-    description: item.node.proyectoPortafolio.description,
-    imgSrc: item.node.proyectoPortafolio.imgsrc_url.node.link,
-    demoURL: item.node.proyectoPortafolio.demourl,
-    repoURL: item.node.proyectoPortafolio.repoUrl,
-    skills: item.node.proyectoPortafolio.skills,
-    skillicons,
-  };
-});
+} catch (error) {
+  console.error("Error fetching main data:", error);
+  // Si falla, obtener los datos de respaldo
+  mainData = await fetchBackupData();
+}
 
 const { cardsLength = 6 } = Astro.props;
 ---
