--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -56,5 +56,5 @@ const {
 <!-- css librerias/ cdn -->
 
 <!-- Iconify CDN -->
-<script src="https://code.iconify.design/iconify-icon/2.0.0/iconify-icon.min.js"
+<script is:inline src="https://code.iconify.design/iconify-icon/2.0.0/iconify-icon.min.js"
 ></script>
