--- a/src/components/organisms/Portfolio/_portfolio.scss
+++ b/src/components/organisms/Portfolio/_portfolio.scss
@@ -5,7 +5,9 @@
   padding-block: 15rem;
   writing-mode: horizontal-tb;
   max-width: 1200px;
-  margin: 0 auto;;
+  margin: 0 auto;
+  height: 100%;
+  min-height: 654px;
 }
 .portfolio__title{
   margin-bottom:5rem ;
