--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,4 +1,5 @@
 
+@use "@sass/variables" as v;
 
 @mixin reset-pm {
 	padding: 0;
@@ -24,10 +25,6 @@
 		font-family: 'Questrial', sans-serif;
 	}
 }
-
-
-
-
 @mixin transition-all{
 	transition-property: all;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
