--- a/src/components/molecules/ContactFormContent/_contact-form.scss
+++ b/src/components/molecules/ContactFormContent/_contact-form.scss
@@ -10,13 +10,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  color: v.$secundaryColor;
+  color: var(--white);
   input {
     padding: 0.9rem;
     font-size: 1.5rem;
   }
   label {
     font-size: 1.3rem;
+    margin-bottom: .2rem;
   }
   textarea {
     padding: 0.6rem;
