--- a/src/components/molecules/Footer/_footer.scss
+++ b/src/components/molecules/Footer/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     @include centerFlex(space-between);
     padding: 3rem ;
-    background: v.$mainColor;
+    background: var(--black);
     min-height: 15dvh;
     &__list{
         display: flex;
@@ -11,7 +11,7 @@
     &__link{
         color: v.$ufo-green;
         &:hover{
-            color: v.$secundaryColor;
+            color: var(--secondary-color);
         }
     }
 
