--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,11 +14,13 @@ import ToastNotification from "@src/components/atoms/ToastNotification/ToastNoti
 const { user, skills, tools } = await getData();
 ---
 
-<script>
+<script  >
   import ToastNotification from "@src/controllers/toastAlerts.controller";
+  document.addEventListener("DOMContentLoaded", () => {
   setTimeout(() => {
     ToastNotification("This site is under construction 🚧🏗️", "info");
   }, 4000);
+});
 </script>
 <Layout>
   <BackgroundGradient>
