✨ New about profile image. README updated

--- a/src/components/organisms/About/About.astro
+++ b/src/components/organisms/About/About.astro
@@ -14,7 +14,7 @@ import AboutData from "@data/about.mdx";
         <img
           src={data.aboutPicture}
           alt={`Fot de perfil de  ${data.name} ${data.lastName}`}
-          class="profile__img"
+          class="profile__box__image"
           width="100"
           height="100"
         />
