--- a/src/components/organisms/Social/_social.scss
+++ b/src/components/organisms/Social/_social.scss
@@ -11,7 +11,7 @@
     rgb(20, 0, 48) 6%,
     rgba(34, 2, 80, 0.103) 10%
   ),
-  url("/img/cuadriculaDifuminada.png");
+  url("/img/cuadricula.svg");
   background-size: cover;
   @media screen and (max-width: 980px) {
     min-height: 200%;
