--- a/src/components/molecules/BlogPost/_post-card.scss
+++ b/src/components/molecules/BlogPost/_post-card.scss
@@ -89,6 +89,7 @@
     margin-bottom: 0.8rem;
     line-height: 1.5;
     display: -webkit-box;
+    line-clamp: 2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
