--- a/src/components/molecules/Footer/_footer.scss
+++ b/src/components/molecules/Footer/_footer.scss
@@ -11,7 +11,7 @@
     &__link{
         color: v.$ufo-green;
         &:hover{
-            color: var(--secondary-color);
+            color: white;
         }
     }
 
