--- a/src/components/organisms/About/_about.scss
+++ b/src/components/organisms/About/_about.scss
@@ -5,7 +5,7 @@
   @include centerFlex();
   flex-direction: column;
   color: v.$mainColor;
-  .about__container {
+  &__container {
     max-width: 1300px;
     width: 100%;
     @include centerFlex(space-around);
@@ -25,8 +25,8 @@
       }
 
       .profile__box {
-        width: 37.9rem;
-        height: 37.9rem;
+        width: 34rem;
+        height: 34rem;
         border-radius: 50%;
         border: 2px solid v.$ufo-green;
         overflow: hidden;
@@ -35,7 +35,11 @@
           height: 100%;
           max-width: 25rem;
         }
-        .profile__img {
+        &:hover img{
+            filter: saturate(.45);
+
+        }
+        &__image{
           width: 100%;
           height: 100%;
           object-fit: cover;
