🐛 Se corrige problema de islas

--- a/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
+++ b/src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro
@@ -13,7 +13,7 @@ import SocialCardImage from "@src/components/atoms/SocialCardImage/SocialCardIma
 <Button type="button" content="Watch" extraClass="youtube__button"/>
 <SocialCardImage image="/img/icons/youtube.svg" altDesc="Youtube logo" />
 </div>
-<style lang="scss" is:global
+<style lang="scss" is:inline
 >
   .youtubeThumbnail {
     background-size: cover;
