♻️ Se restructura architectura de estilos de sass
- Se actualizan imports de sass por la nueva directiva @use
- Se eliminan componentes y rutas no utilizadas.
-Se corrige problema con Youtube video
- Se corrige problema con cards de portafolio

--- a/src/components/atoms/BackgroundIconsFloat/_bg-icons.scss
+++ b/src/components/atoms/BackgroundIconsFloat/_bg-icons.scss
@@ -1,3 +1,4 @@
+@use "@sass/variables" as *;
 @keyframes move {
 	100% {
 		transform: translate3d(0, 0, 20px) rotate(360deg);
@@ -25,7 +26,7 @@
 	animation-duration: 30;
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
-	color: v.$french-violet;
+	color: $french-violet;
 }
  .customScheme .bg-icons span:nth-child(0) {
 	background-image: url("/img/icons/skills/javascript-color.svg");
@@ -65,7 +66,7 @@
 	box-shadow: -44vmin 0 6.067807537859071vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(3) {
-	color: v.$french-violet;
+	color: $french-violet;
 	top: 44%;
 	left: 6%;
 	animation-duration: 103s;
@@ -122,7 +123,7 @@
 	box-shadow: 44vmin 0 5.504111027962081vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(8) {
-	color: v.$french-violet;
+	color: $french-violet;
 	top: 10%;
 	left: 21%;
 	animation-duration: 203s;
@@ -215,7 +216,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(16) {
-	color: v.$french-violet;
+	color: $french-violet;
 	top: 32%;
 	left: 71%;
 	animation-duration: 128s;
@@ -248,7 +249,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(19) {
-	color: v.$french-violet;
+	color: $french-violet;
 	top: 40%;
 	left: 51%;
 	animation-duration: 128s;
@@ -257,7 +258,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(20) {
-	color: v.$french-violet;
+	color: $french-violet;
 	top: 66%;
 	left: 100%;
 	animation-duration: 128s;
@@ -277,7 +278,7 @@
 		animation-duration: 30;
 		animation-timing-function: linear;
 		animation-iteration-count: infinite;
-		color: v.$french-violet;
+		color: $french-violet;
 	}
 
 	 .customScheme .bg-icons span:nth-child(0) {
@@ -316,7 +317,7 @@
 		box-shadow: -44vmin 0 6.067807537859071vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(3) {
-		color: v.$french-violet;
+		color: $french-violet;
 		top: 34%;
 		left: 16%;
 		animation-duration: 103s;
@@ -373,7 +374,7 @@
 		box-shadow: 44vmin 0 5.504111027962081vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(8) {
-		color: v.$french-violet;
+		color: $french-violet;
 		top: 90%;
 		left: 21%;
 		animation-duration: 203s;
@@ -466,7 +467,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(16) {
-		color: v.$french-violet;
+		color: $french-violet;
 		top: 105%;
 		left: 71%;
 		animation-duration: 128s;
@@ -499,7 +500,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(19) {
-		color: v.$french-violet;
+		color: $french-violet;
 		top: -70%;
 		left: 51%;
 		animation-duration: 128s;
@@ -508,7 +509,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(20) {
-		color: v.$french-violet;
+		color: $french-violet;
 		top: 56%;
 		left: 100%;
 		animation-duration: 128s;
