--- a/src/components/molecules/YoutubeModal/YoutubeModal.astro
+++ b/src/components/molecules/YoutubeModal/YoutubeModal.astro
@@ -23,7 +23,7 @@ const videoId = guid.replace("yt:video:", "");
     />
   </div>
 </section>
-<style is:global>
+<style is:inline>
   lite-youtube {
     min-width: 100%;
     height: 100%;
