--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -23,7 +23,7 @@ import BlogPost from "@src/components/molecules/BlogPost/BlogPost";
     </div>
     <div class="social__item social__item-2">
       <SocialCard extrClass="youtube__card">
-        <YoutubeCardContent server:defer />
+        <YoutubeCardContent />
       </SocialCard>
     </div>
     <div class="social__item social__item-3">
