--- a/src/components/atoms/ButtonAbout/_button-about.scss
+++ b/src/components/atoms/ButtonAbout/_button-about.scss
@@ -1,3 +1,5 @@
+@use "@sass/variables" as *;
+@use "@sass/mixins" as *;
 .about__links {
   position: absolute;
   @include centerFlex(space-around);
@@ -16,12 +18,12 @@
   font-weight: 400;
 
   &:hover {
-    color: v.$ufo-green;
+    color: $ufo-green;
     transform: scale(1.1);
   }
 
   .about__iconify {
-    color: v.$ufo-green;
+    color: $ufo-green;
   }
 
   @media screen and (max-width: 1204px) {
