--- a/src/components/atoms/SocialIcons/_social-icons.scss
+++ b/src/components/atoms/SocialIcons/_social-icons.scss
@@ -1,10 +1,13 @@
+@use "@sass/variables" as *;
+@use "@sass/mixins" as *;
+
 .social__container {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2rem;
   margin-top: 2rem;
-  
+
 
   .social__link {
     display: flex;
@@ -15,12 +18,12 @@
   }
   .social__icon {
     width: 30px;
-    color: v.$ufo-green;
+    color: $ufo-green;
   }
   .social__tooltip {
     display: none;
     padding: 0.3rem 8px;
-    background: v.$ufo-green;
+    background: $ufo-green;
     min-width: 37px;
     text-align: center;
     position: absolute;
@@ -37,7 +40,7 @@
       left: 50%;
       border-width: 5px;
       border-style: solid;
-      border-color: transparent transparent v.$ufo-green transparent;
+      border-color: transparent transparent $ufo-green transparent;
       transform: translate(-50%);
     }
   }
