--- a/src/components/molecules/Carousel/carousel.scss
+++ b/src/components/molecules/Carousel/carousel.scss
@@ -1,3 +1,6 @@
+@use "@sass/mixins" as *;
+@use "@sass/variables" as *;
+
 .slider {
   width: 70%;
   margin: auto;
@@ -73,7 +76,7 @@
   position: absolute;
   background: #240269;
   box-shadow: 0px 0px 3px 1px #3c03a5c4;
-  color: v.$ufo-green;
+  color: $ufo-green;
   padding: 0.2rem 0.5rem;
   border-radius: 5px;
   z-index: 20;
